fixed comma delineated selectors to achieve proper spacing

--- a/css/ccap-statistics.less
+++ b/css/ccap-statistics.less
@@ -459,7 +459,8 @@ div.part > div.titlepage {display:none;}
         display: inline;
       }
 
-      > .body, .body > p {
+      > .body,
+      > .body > p {
         font-family: @font-family-statistics;
         display: inline; 
       }
